Add new ui users and integrate BE,FE